[package]
name = "vueko-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.100", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
futures = "0.3.23"
roux = "2.2.4"

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "cache",
    "client",
    "collector",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
]
version = "0.11.5"
